# Resume-Parser

./: .gitignore  DockerFile  Dockerfile  main.py  pyproject.toml  requirements.txt
parsers/: extractor.py  pipeline.py  schema.py
services/: firestore.py
